--- a/mia/Views/Common/HXInfectUserListView/HXInfectUserListView.xib
+++ b/mia/Views/Common/HXInfectUserListView/HXInfectUserListView.xib
@@ -25,7 +25,7 @@
                                         <constraint firstAttribute="width" secondItem="LlU-n7-AhX" secondAttribute="height" multiplier="1:1" id="AGE-KS-A9C"/>
                                         <constraint firstAttribute="width" constant="35" id="zYM-Q0-M9q"/>
                                     </constraints>
-                                    <state key="normal" image="IUL-CloseIcon"/>
+                                    <state key="normal" image="C-CloseIcon-Gray"/>
                                     <connections>
                                         <action selector="closeButtonPressed" destination="iN0-l3-epB" eventType="touchUpInside" id="lUn-dG-ZVe"/>
                                     </connections>
@@ -88,6 +88,6 @@
         </view>
     </objects>
     <resources>
-        <image name="IUL-CloseIcon" width="25" height="25"/>
+        <image name="C-CloseIcon-Gray" width="25" height="25"/>
     </resources>
 </document>
